# projectl-sandbox

./: .forge-canary  .gitignore  CLAUDE.md  README.md  forge-config.json
.claude/: forge-config.json  settings.json
.claude/agents/: architect.md  docs-writer.md  implementer.md  meta-agent.md  plan-checker.md  reviewer.md  security-auditor.md  tester.md
.claude/commands/: add-agent.md  agent.md  align.md  assign-goal.md  audit-export.md  autonomy.md  board-session.md  board.md  build.md  calibrate.md  company-add-project.md  company-assign.md  company-bootstrap.md  company-create.md  company-dismiss.md  company-health.md  company-hire.md  company-init.md  company-knowledge.md  company-new-project.md  company-projects.md  company-reorg.md  company-request.md  company-retro.md  company-route.md  company-standup.md  company-start-venture.md  company-status.md  company-upgrade.md  competitive-intelligence.md  complete.md  compliance-pack.md  continue.md  customer-status.md  daemon.md  dashboard-web.md  dashboard.md  discuss.md  docs.md  economics.md  (+43 more)
.company/: vision.md
.company/templates/projects/python-cli/: _template.json  pyproject.toml
.company/templates/projects/python-cli/src/: __init__.py  __main__.py
.company/templates/projects/python-cli/tests/: __init__.py  conftest.py
.planning/: PROJECT.md  ROADMAP.md
assets/: forge-playbook-sample.epub  forge-playbook-sample.html
docs/: DEPLOY.md  LEDGER.md
site/: config.js  index.html  success.html  test_storefront.py
worker/: README.md  package-lock.json  package.json  wrangler.toml
worker/src/: dates.js  (+11 more)
(+266 files in other folders)
